Bug 499357 - Price Editor: Modifying a commodity seems to duplicate it
Summary: Price Editor: Modifying a commodity seems to duplicate it
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: ux-ui (other bugs)
Version First Reported In: git (master)
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-01-31 09:12 UTC by Paul Worrall
Modified: 2025-07-31 14:14 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Paul Worrall 2025-01-31 09:12:52 UTC
Using: kmymoney-master-4044-linux-gcc-x86_64.AppImage

STEPS TO REPRODUCE
1. Tools => Prices
2. Select a commodity and click Modify
3. Change the Date and click OK

OBSERVED RESULT
A new row appears in the dialog showing the new date and the row showing the old date is still present

EXPECTED RESULT
Only one row showing the new date

SOFTWARE/OS VERSIONS
KDE Plasma Version: 6.2.91
KDE Frameworks Version: 6.10.0
Qt Version: 6.9.0
Graphics Platform: Wayland
Comment 1 Thomas Baumgart 2025-07-31 06:59:06 UTC
Git commit 150ac550d74d3db93570820ff597bb957691770b by Thomas Baumgart.
Committed on 31/07/2025 at 06:08.
Pushed by tbaumgart into branch 'master'.

Invalidate sort model after editing prices
FIXED-IN: 5.2.1

M  +4    -3    kmymoney/dialogs/kmymoneypricedlg.cpp

https://invent.kde.org/office/kmymoney/-/commit/150ac550d74d3db93570820ff597bb957691770b
Comment 2 Thomas Baumgart 2025-07-31 14:14:40 UTC
Git commit 01c9d69158bfae9102b992211ff196a665d23d33 by Thomas Baumgart.
Committed on 31/07/2025 at 06:59.
Pushed by tbaumgart into branch '5.2'.

Invalidate sort model after editing prices
FIXED-IN: 5.2.1
(cherry picked from commit 150ac550d74d3db93570820ff597bb957691770b)

M  +4    -3    kmymoney/dialogs/kmymoneypricedlg.cpp

https://invent.kde.org/office/kmymoney/-/commit/01c9d69158bfae9102b992211ff196a665d23d33