Invalidate sort model after editing prices

BUG: 499357
FIXED-IN: 5.2.1